--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,28 @@
+# Jekyll configuration
 markdown: kramdown
+kramdown:
+  auto_ids: true
+  toc_levels: 1..3
+
+# Plugin settings
+plugins:
+  - jekyll-toc
+
+# Global settings for TOC
+toc:
+  min_level: 1
+  max_level: 3
+  ordered_list: false
+  no_toc_section_class: no_toc_section
+  list_class: toc
+  sublist_class: toc-sublist
+  item_class: toc-entry
+
+# Default front matter for all pages
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"
+      toc: true
