--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,18 @@
-# Jekyll configuration
+# _config.yml
+
+# テーマの設定（例：minima テーマを使用する場合）
+theme: minima
+
+# Markdown処理エンジンの設定
 markdown: kramdown
 kramdown:
   auto_ids: true
-  toc_levels: 1..3
 
-# Plugin settings
+# プラグインの設定
 plugins:
   - jekyll-toc
 
-# Global settings for TOC
+# 目次（TOC）のグローバル設定
 toc:
   min_level: 1
   max_level: 3
@@ -18,11 +22,10 @@ toc:
   sublist_class: toc-sublist
   item_class: toc-entry
 
-# Default front matter for all pages
+# すべてのページにデフォルトで適用される設定
 defaults:
   -
     scope:
-      path: "" # an empty string here means all files in the project
+      path: "" # プロジェクト内のすべてのファイルに適用
     values:
-      layout: "default"
-      toc: true
+      toc: true # デフォルトですべてのページに目次を表示
