--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
+title: Project Design
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+
+twitter_username: pjdhiro
+# github_username: username
 minimal_mistakes_skin: default
 search: true
 
@@ -58,8 +56,9 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
-  avatar : "/assets/images/bio-photo.jpg"
+  name   : "pjdhiro"
+  # avatar : "/assets/images/bio-photo.jpg"
+  avatar : "/assets/images/101631407.jpeg"
   bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
     - label: "Website"
@@ -105,6 +104,10 @@ defaults:
       type: pages
     values:
       layout: single
+      categories:
+        - Pages
+      # tags:
+      #   - General
       author_profile: true
 
 category_archive:
