--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,5 +7,5 @@ main:
     url: /tags/
   - title: "About"
     url: /about/
-  - title: "テスト"
-    url: /test/
+  # - title: "page-categories"
+  #   url: /Page-categories/
