--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
   - title: "Posts"
     url: /posts/
-  - title: "Categories"
+  - title: "Posts categories"
     url: /categories/
-  - title: "Tags"
+  - title: "Posts tags"
     url: /tags/
   - title: "About"
     url: /about/
