--- a/_config.yml
+++ b/_config.yml
@@ -86,8 +86,8 @@ header:
   nav: main  # データファイル _data/navigation.yml の main を参照
 
 # サイドバー設定
-sidebar:
-  nav: sidebar  # データファイル _data/sidebar.yml の sidebar を参照
+# sidebar:
+#   nav: sidebar  # データファイル _data/sidebar.yml の sidebar を参照
 
 footer:
   links:
@@ -113,8 +113,8 @@ defaults:
       comments: true
       share: true
       related: true
-      sidebar:
-        nav: sidebar
+      # sidebar:
+      #   nav: sidebar
   # _pages
   - scope:
       path: "_pages"
@@ -126,8 +126,8 @@ defaults:
       # tags:
       #   - General
       author_profile: true
-      sidebar:
-        nav: sidebar
+      # sidebar:
+      #   nav: sidebar
 
 category_archive:
   type: liquid
