--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,12 @@
 main:
+  - title: "Project design"
+    url: /project-design/
   - title: "Posts"
     url: /posts/
-  - title: "Posts categories"
-    url: /categories/
-  - title: "Posts tags"
-    url: /tags/
+  # - title: "Posts categories"
+  #   url: /categories/
+  # - title: "Posts tags"
+  #   url: /tags/
   # - title: "About"
   #   url: /about/
   # - title: "page-categories"
@@ -13,7 +15,14 @@ main:
 docs:
   - title: Pages
     children:
-      - title: "About"
-        url: /about/
       - title: "Project design"
         url: /project-design/
+      - title: "About"
+        url: /about/
+  - title: "Posts"
+    url: /posts/
+    children:
+    - title: "Posts categories"
+      url: /categories/
+    - title: "Posts tags"
+      url: /tags/
