--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Project Design
+title: Emotion Processing in Project Design
 email:
 description: >- # this means to ignore newlines until "baseurl:"
 locale: ja-JP  # ロケールを日本語に設定
