--- a/_config.yml
+++ b/_config.yml
@@ -48,13 +48,13 @@ author:
   avatar : "/assets/images/101631407.jpeg"
   bio    : "コンテンツを作成中です"
   links:
-    - label: "blogspot"
+    - label: "previous blog@blogspot"
       icon: "fas fa-fw fa-link"
       url: "https://pjdhiro.blogspot.com/"
-    - label: "Facebook"  # Facebookを追加
+    - label: "pjdhiro@Facebook "  # Facebookを追加
       icon: "fab fa-fw fa-facebook-square"
       url: "https://facebook.com/pjdhiro"
-    - label: "Twitter"
+    - label: "pjdhiro@X/Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://x.com/pjdhiro"
     - label: "GitHub pages/*.md"
