--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author:
   avatar : "/assets/images/101631407.jpeg"
   bio    : "コンテンツを作成中です"
   links:
-    - label: "EN blog@blogspot"
+    - label: "EN blog@Blogspot"
       icon: "fas fa-fw fa-link"
       url: "https://pjdhiro.blogspot.com/"
     - label: "pjdhiro@Facebook "  # Facebookを追加
@@ -67,7 +67,7 @@ header:
 
 footer:
   links:
-    - label: "blogspot"
+    - label: "Blogspot"
       icon: "fas fa-fw fa-link"
       url: "https://pjdhiro.blogspot.com/"
     - label: "Facebook"  # Facebookを追加
@@ -94,6 +94,8 @@ defaults:
       related: true
       sidebar:
         nav: docs
+      toc: true
+      toc_sticky: true
   # _pages
   - scope:
       path: "_pages"
@@ -107,6 +109,8 @@ defaults:
       author_profile: true
       sidebar:
         nav: docs
+      toc: true
+      toc_sticky: true
 
 category_archive:
   type: liquid
