notice:心理的安全性

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,8 @@ main:
 docs:
   # - title: "Pages"
   #   children:
+  - title: "Project design"
+    url: /project-design/
   - title: "感情処理"
     url: /emotional-processing/
     children:
