--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ plugins:
 author:
   name   : "pjdhiro"
   avatar : "/assets/images/101631407.jpeg"
-  bio    : "まずはラフに。少しずつ細部を。2年を目標に。"
+  bio    : "まずはラフに下書きし、少しずつ細部を整えていく。完成目標は2026末"
   links:
     - label: "EN blog@Blogspot"
       icon: "fas fa-fw fa-link"
