remove: pages: prev next

--- a/_config.yml
+++ b/_config.yml
@@ -107,6 +107,7 @@ defaults:
         nav: docs
       toc: true
       toc_sticky: true
+      pagination: false
 
 category_archive:
   type: liquid
