--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ docs:
     children:
       - title: "瞑想"
         url: /meditation/
-      - title: "情動伝染"
+      - title: "情動伝染(作成中)"
         url: /emotional-contagion/
   - title: "作成中"
     children:
