--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # ---------------------------------------------------
 # サイト基本設定
 # ---------------------------------------------------
+baseurl: "/pjdhiro" # リポジトリ名がURLに含まれる場合
 title: "Emotion Processing in Project Design" # サイトのタイトル
 email: # サイトに関する連絡先メールアドレス
 locale: ja-JP  # サイトのロケール（日本語）
