--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ author:
   avatar : "/assets/images/101631407.jpeg"
   bio    : "まずはラフに下書きし、少しずつ細部を整えていく。完成目標は2026末"
   links:
-    - label: "Blogspot"
+    - label: "発散用@Blogspot"
       icon: "fas fa-fw fa-link"
       url: "https://pjdhiro.blogspot.com/"
     - label: "pjdhiro" 
