瞑想:私の実践 main navi

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 main:
-  # - title: "Project design"
-  #   url: /project-design/
+  - title: "Project design"
+    url: /project-design/
   - title: "Posts"
     url: /posts/
   - title: "Pages"
