--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ plugins:
 author:
   name   : "pjdhiro"
   avatar : "/assets/images/101631407.jpeg"
-  bio    : "まずはラフに下書きし、少しずつ細部を整えていく。完成目標は2026末"
+  bio    : "感情処理について、まずはラフに下書き。完成目標は2026末。Postは場に差し出す「私の構え」。自己紹介的。"
   links:
     - label: "発散用@Blogspot"
       icon: "fas fa-fw fa-link"
