--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ plugins:
 author:
   name   : "pjdhiro"
   avatar : "/assets/images/101631407.jpeg"
-  bio    : "感情処理についてまずはラフに、完成目標は2027末。Postは場に差し出す「私の構え」、「世界がどう見えているか？」の間主観的な自己紹介。"
+  bio    : "感情処理についてまずはラフに、完成目標は2027末。Postは場に差し出す「私の構え」、「世界がどう見えているか？」の間主観的な自己紹介。私の一の太刀"
   links:
     - label: "発散用@Blogspot"
       icon: "fas fa-fw fa-link"
