--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ plugins:
 author:
   name   : "pjdhiro"
   avatar : "/assets/images/101631407.jpeg"
-  bio    : "感情処理についてまずはラフに、願望は2027末までに詳細を。狙いは経営学の魔改造。Postは場に差し出す「私の構え」、「世界がどう見えているか？」の間主観的な自己紹介。"
+  bio    : "感情処理についてまずはラフに。2027末までにできたら。狙いは経営学の魔改造。Postは場に差し出す「私の構え」。「世界がどう見えているか？」の間主観的な自己紹介。"
   links:
     - label: "発散用@Blogspot"
       icon: "fas fa-fw fa-link"
