--- a/_config.yml
+++ b/_config.yml
@@ -195,3 +195,6 @@ share:
 google_analytics: 
   production: "G-WV09PB2PZT" # 本番環境の測定ID
   development: "" # 開発環境では空に設定
+# ---------------------------------------------------
+include:
+  - "_includes/feature_row"
