--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ minimal_mistakes_skin: default # Minimal Mistakes のスキン設定
 markdown: kramdown # Markdown 処理エンジン
 kramdown:
   input: GFM
+  parse_block_html: true
   auto_ids: true
   toc_levels: 1..6  # 目次に含める見出しのレベルを指定
 # ---------------------------------------------------
