--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ plugins:
 author:
   name   : "pjdhiro"
   avatar : "/assets/images/101631407.jpeg"
-  bio    : "感情処理についてまずはラフに。2027末までにできたら。Postは場に差し出す「私の構え」。「世界がどう見えているか？」の間主観的な自己紹介。"
+  bio    : "感情処理についてまずはラフに。2027末までにできたら。Postは「世界がどう見えているか？」の間主観的な自己紹介。"
   links:
     - label: "発散用@Blogspot"
       icon: "fas fa-fw fa-link"
