--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -40,10 +40,12 @@ cat-design-topics:
 cat-side-notes:
   - title: "Side Notes"
     children:
-    - title: "WEBツール"
-      url: /pages-categories/web-tools/
     - title: "経済"
       url: /pages-categories/economy/
+    - title: "WEBツール"
+      url: /pages-categories/web-tools/
+    - title: "Pine Script"
+      url: /pages-categories/pine/
     - title: "サイト編集"
       url: /pages-categories/dev/
 
